pgnginx_dep.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
    meta.helm.sh/release-name: pgnginx
    meta.helm.sh/release-namespace: default
  name: pgnginx
  generation: 1
  managedFields:
    - manager: Go-http-client
      operation: Update
      apiVersion: apps/v1
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
  namespace: default
  labels:
    app.kubernetes.io/instance: pgnginx
    app.kubernetes.io/managed-by: manual
    app.kubernetes.io/name: pgnginx
    helm.sh/chart: pgnginx-0.0.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: pgnginx
      app.kubernetes.io/name: pgnginx
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: pgnginx
        app.kubernetes.io/managed-by: manual
        app.kubernetes.io/name: pgnginx
        helm.sh/chart: pgnginx-0.0.1
    spec:
      containers:
        - readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 6
          name: pgnginx
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 120
            timeoutSeconds: 5
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 6
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: pgsql
              containerPort: 5432
              protocol: TCP
          imagePullPolicy: Always
          image: 'rahulosp/pgnginx:latest'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      hostAliases:
        - ip: 127.0.0.1
          hostnames:
            - status.localhost
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
