ing-pgadmin.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: pgadmin
  generation: 1
  managedFields:
    - manager: Go-http-client
      operation: Update
      apiVersion: networking.k8s.io/v1beta1
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: networking.k8s.io/v1beta1
  namespace: default
  labels:
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pgadmin
spec:
  rules:
    - host: pgadmin.apps.openshift-cluster.perfekt.software
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: pgadmin
              servicePort: 80
status:
  loadBalancer:
    ingress:
      - hostname: apps.openshift-cluster.perfekt.software
