pgnginx_ing.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: pgnginx
  generation: 1
  managedFields:
    - manager: Go-http-client
      operation: Update
      apiVersion: networking.k8s.io/v1beta1
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: networking.k8s.io/v1beta1
  namespace: default
  labels:
    app.kubernetes.io/instance: pgnginx
    app.kubernetes.io/managed-by: manual
    app.kubernetes.io/name: pgnginx
spec:
  rules:
    - host: pgnginx.apps.openshift-cluster.perfekt.software
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: pgnginx
              servicePort: 80
status:
  loadBalancer:
    ingress:
      - hostname: apps.openshift-cluster.perfekt.software
